--- a/resources/js/locales/en/calendar.json
+++ b/resources/js/locales/en/calendar.json
@@ -12,6 +12,30 @@
     "actions": {
       "today": "Today"
     },
+    "event": "event",
+    "events": "events",
+    "selected": "selected",
+    "of": "of",
+    "total": "total",
+    "selectAll": "Select all",
+    "clearSelection": "Clear selection",
+    "moveEvents": "Move events",
+    "delete": "Delete",
+    "undo": "Undo",
+    "undoLastOperation": "Undo last operation",
+    "moveSelectedEvents": "Move selected events",
+    "movingEvents": "Moving {{count}} events",
+    "movingEvents_one": "Moving 1 event",
+    "selectNewDateTime": "Select the new date and time for the selected events.",
+    "newDateAndTime": "New date and time",
+    "preserveOriginalTime": "Events will keep their original time",
+    "moveCount": "Move {{count}} events",
+    "moveCount_one": "Move 1 event",
+    "deleteSelectedEvents": "Delete selected events",
+    "confirmDelete": "Confirm deletion",
+    "deleteWarning": "Are you sure you want to delete {{count}} events? This action cannot be undone.",
+    "deleteCount": "Delete {{count}} events",
+    "deleteCount_one": "Delete 1 event",
     "navigation": {
       "previous": "Previous",
       "next": "Next",
