--- a/resources/js/locales/es/calendar.json
+++ b/resources/js/locales/es/calendar.json
@@ -58,6 +58,30 @@
       "cancel": "Cancelar",
       "move": "Mover"
     },
+    "event": "evento",
+    "events": "eventos",
+    "selected": "seleccionados",
+    "of": "de",
+    "total": "total",
+    "selectAll": "Seleccionar todos",
+    "clearSelection": "Limpiar selección",
+    "moveEvents": "Mover eventos",
+    "delete": "Eliminar",
+    "undo": "Deshacer",
+    "undoLastOperation": "Deshacer última operación",
+    "moveSelectedEvents": "Mover eventos seleccionados",
+    "movingEvents": "Moviendo {{count}} eventos",
+    "movingEvents_one": "Moviendo 1 evento",
+    "selectNewDateTime": "Selecciona la nueva fecha y hora para los eventos seleccionados.",
+    "newDateAndTime": "Nueva fecha y hora",
+    "preserveOriginalTime": "Los eventos mantendrán su hora original",
+    "moveCount": "Mover {{count}} eventos",
+    "moveCount_one": "Mover 1 evento",
+    "deleteSelectedEvents": "Eliminar eventos seleccionados",
+    "confirmDelete": "Confirmar eliminación",
+    "deleteWarning": "¿Estás seguro de que deseas eliminar {{count}} eventos? Esta acción no se puede deshacer.",
+    "deleteCount": "Eliminar {{count}} eventos",
+    "deleteCount_one": "Eliminar 1 evento",
     "events": {
       "count": "Eventos",
       "empty": "No hay eventos para este día",
